tests/negative/gold/uninitialized_field_test.gold
tests/negative/uninitialized_field_test.toit:69:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/uninitialized_field_test.toit:13:3: error: Field 'field' must be initialized in a constructor
  field / any
  ^~~~~
tests/negative/uninitialized_field_test.toit:18:3: error: Field 'field' not initialized on all paths in constructor
  constructor:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:22:3: error: Field 'field' not initialized on all paths in constructor
  constructor.x:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:28:3: error: Field 'field' not initialized on all paths in constructor
  constructor.y:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:33:5: error: Field 'field' not initialized on all paths
    super
    ^~~~~
tests/negative/uninitialized_field_test.toit:36:5: error: Field 'field' not initialized on all paths before implicit super-call
    some_fun this
    ^~~~~~~~
tests/negative/uninitialized_field_test.toit:38:3: error: Field 'field' not initialized on all paths in constructor
  constructor.gee:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:42:3: error: Field 'field' not initialized on all paths in constructor
  constructor.lambda:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:46:3: error: Field 'field' not initialized on all paths in constructor
  constructor.try_finally:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:51:3: error: Field 'field' not initialized on all paths in constructor
  constructor.logical_and arg:
  ^~~~~~~~~~~
tests/negative/uninitialized_field_test.toit:54:3: error: Field 'field' not initialized on all paths in constructor
  constructor.logical_or arg:
  ^~~~~~~~~~~
Compilation failed.
